kde4libs (4:3.97.0-1) experimental; urgency=low

  * New upstream release.
  * Update *.install files.
  * Update Standards-Version to 3.7.2.
  * Remove README.Debian, packages are stable now.
  * Update package descriptions, remove referencies to beta status.
  * TODO (maybe): kfreebsd support.
  * TODO: demote hal to Suggest, see mornfall's mail in -talk

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Thu, 06 Dec 2007 02:21:24 +0100

kde4libs (4:3.96.0-1) experimental; urgency=low

  * New upstream release.
  * Update *.install files.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Wed, 14 Nov 2007 13:17:32 +0100

kde4libs (4:3.95.2-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Bump build dependencies versions.
  * Update installed files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 08 Nov 2007 20:18:43 +0100

kde4libs (4:3.95.0-1) experimental; urgency=low

  * New upstream release: KDE4 beta 4.

  +++ Changes by Fathi Boudra:

  * Remove libpulse0 conflict. It was a temporary workaround.
  * Update 11_applications_menu patch. We must keep the extension unchanged.
  * Add 12_deprecate_applnk patch. We use /usr/share/applications in any case.

  +++ Changes by Armin Berres:

  * Update *.install files.

  +++ Changes by Sune Vuorela:

  * Leet shlibs hacking.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 25 Oct 2007 14:47:24 +0200

kde4libs (4:3.94.0-2) experimental; urgency=low

  +++ Changes by Fathi Boudra:

  * Pull SVN branch to r726725.

  +++ Changes by Armin Berres:

  * Add debug package.
  * Make kdelibs5-dev depend on recent soprano.
  * Add dependency of kdelibs5 on kde-icons-oxygen. It is needed by nearly
    every KDE4 application.

  +++ Changes by Ana Beatriz Guerrero Lopez:
  
  * Update *.install files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 18 Oct 2007 20:56:22 +0200

kde4libs (4:3.94.0-1) experimental; urgency=low
