@@ -2,8 +2,12 @@
 
 RUNTIME_DEPS := kde-icons-oxygen, kdebase-runtime-bin, kdebase-runtime-data
 CURRENTVERSION := $(shell head -1 debian/changelog  | sed 's/[^(]*(\([^)]*\)).*/\1/')
-DEB_DH_MAKESHLIBS_ARGS_kdelibs5 := -V'kdelibs5 (>= $(CURRENTVERSION)), $(RUNTIME_DEPS)'  #In general we shouldn't bump on each upload, but in the beta cycles,
-                                                                        #it is probably good. Else on upstream versions it is probably a good thing.
+DEB_DH_MAKESHLIBS_ARGS_kdelibs5 := -V'kdelibs5 (>= $(CURRENTVERSION)), $(RUNTIME_DEPS)'  
+#In general we shouldn't bump on each upload, but in the beta cycles,
+#it is probably good. Else on upstream versions it is probably a good thing.
+
+
+export LDFLAGS+="-Wl,--as-needed"
 
 include debian/cdbs/kde.mk
 
